[gd_scene load_steps=13 format=3 uid="uid://cgol6uoqdcvtj"]

[ext_resource type="Script" path="res://scripts/resourceObjects/root/resourceObjects.gd" id="1_6xegt"]
[ext_resource type="Texture2D" uid="uid://dne6w5dgho0vy" path="res://assets/images/resourceObjects/rock/root/rock.png" id="1_waexf"]
[ext_resource type="Resource" uid="uid://bkqm4fp34ty5s" path="res://resources/resourceObjects/rock/root/rockStats.tres" id="2_6mld6"]
[ext_resource type="Script" path="res://scripts/components/damageButton/root/damageButtonComponent.gd" id="2_nv7lx"]
[ext_resource type="Script" path="res://scripts/components/health/root/healthComponent.gd" id="3_rlpai"]
[ext_resource type="Script" path="res://scripts/components/healthBar/root/healthBarComponent.gd" id="4_4lhsr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ck22u"]
bg_color = Color(0.133333, 0.137255, 0.137255, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.941176, 0.964706, 0.941176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ufi0"]
bg_color = Color(0.941176, 0.964706, 0.941176, 1)

[sub_resource type="Animation" id="Animation_fixfu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_un5ie"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0, 0.174533, 0.0]
}

[sub_resource type="Animation" id="Animation_slsmk"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l342x"]
_data = {
"RESET": SubResource("Animation_fixfu"),
"hit": SubResource("Animation_un5ie"),
"idle": SubResource("Animation_slsmk")
}

[node name="rock" type="StaticBody2D"]
collision_mask = 2
script = ExtResource("1_6xegt")
stats = ExtResource("2_6mld6")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_waexf")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-16, 16, 16, 16, 16, 10, 15, 10, 15, 9, 14, 9, 14, 8, 13, 8, 13, 7, 12, 7, 12, 4, 9, 4, 9, 2, 8, 2, 8, 1, 7, 1, 7, 0, 5, 0, 5, -2, -6, -2, -6, 1, -7, 1, -7, 2, -8, 2, -8, 4, -9, 4, -9, 5, -10, 5, -10, 7, -13, 7, -13, 9, -14, 9, -14, 11, -15, 11, -15, 13, -16, 13)

[node name="damageButtonComponent" type="Button" parent="." node_paths=PackedStringArray("healthComponent")]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_left = -16.0
offset_top = -2.0
offset_right = 16.0
offset_bottom = 16.0
pivot_offset = Vector2(16, 9)
flat = true
script = ExtResource("2_nv7lx")
healthComponent = NodePath("../healthComponent")

[node name="healthComponent" type="Node2D" parent="." node_paths=PackedStringArray("healthBarComponent", "anim")]
script = ExtResource("3_rlpai")
healthBarComponent = NodePath("../healthBarComponent")
anim = NodePath("../anim")

[node name="healthBarComponent" type="ProgressBar" parent="."]
visible = false
offset_left = -18.0
offset_top = 16.0
offset_right = 18.0
offset_bottom = 22.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(18, 3)
theme_override_styles/background = SubResource("StyleBoxFlat_ck22u")
theme_override_styles/fill = SubResource("StyleBoxFlat_0ufi0")
value = 50.0
show_percentage = false
script = ExtResource("4_4lhsr")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l342x")
}
autoplay = "idle"

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="pressed" from="damageButtonComponent" to="damageButtonComponent" method="_on_pressed"]
